@@ -4,16 +4,28 @@ Non-parametric confidence intervals using permutation tests
 ----
 This package implements the methodology described in https://arxiv.org/pdf/2111.14966.pdf
 
-The R package is still much work in progress. Currently is implemented the univariate two-sample confidence interval. 
+The R package is still work in progress. 
 The general univariate case (ie. a model and a test that satisifes the conditions of section 2.1 in the paper) can be handled by calling ```ciperm```/```ciperm0``` directly.
+Similarly, the general multivariate case in handled by calling ```ciperm```/```ciperm0```. 
 
-```ciperm0```: The workhorse that performs the actual permutation scheme
+
+```ciperm0``` and ```ciperm0.multi```: The workhorses that perform the actual permutation scheme
 
 ```ciperm```: Computes the confidence interval 
 (ie. by using quantiles from ```ciperm0```)
+
+```ciperm.multi```: Computes the confidence interval 
 
 ```ciperm.twosample```: 
 User-friendly function for computing the two-sample confidence interval. 
 
 ```ciperm.linreg```: 
 User-friendly function for computing confidence interval for the slope in linear regression. 
+
+```alpha.multi```: Computes the joint confidence level (from output of ```ciperm0.multi```)
+
+```adjusted_ci```: Simple bisection algorithm that computes adjusted confidence intervals (from output of ```ciperm0.multi```)
+
+# Installation 
+The recommended way is to use the devtools package, e.g. run `devtools::install_github("naolsen/ciperm")` from the R interface.
+As the package is only based on R code, no special compilers are needed. 
